// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/RadioButton checkedRadioButton 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
  >
    <label
      className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
    >
      <input
        checked={true}
        className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
        name="RadioButtons02"
        type="radio"
      />
      <div
        className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
      >
        <div
          className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
        />
      </div>
      <div
        className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
      >
        Default checked radio
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/RadioButton colouredRadioButton 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 jYQeIN"
          name="RadioButtons"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 iXRqLe"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bMMBJy"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Primary colour radio
        </div>
      </label>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 bdpfvB"
          name="RadioButtons"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 jxLUMX"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 fLbbgD"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Success colour radio
        </div>
      </label>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 eOwlHp"
          name="RadioButtons"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 hHGzRD"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 huyqXr"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Warning colour radio
        </div>
      </label>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 hjZZDd"
          name="RadioButtons"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 crGNEn"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 fDNuFT"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Danger colour radio
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/RadioButton defaultRadioButton 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
          name="RadioButtons01"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Default radio
        </div>
      </label>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
          name="RadioButtons01"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Default radio 02
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/RadioButton disabledRadioButton 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 caxtUt"
        disabled={true}
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
          disabled={true}
          name="RadioButtons03"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Disabled unchecked radio
        </div>
      </label>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 caxtUt"
        disabled={true}
      >
        <input
          checked={true}
          className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
          disabled={true}
          name="RadioButtons03"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Disabled checked radio
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/RadioButton invertedRadioButton 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Box__BoxWrapper-jr1api-0 cizYVY"
    data-testid={null}
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 kJxzei"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 hVPBQb"
          name="RadioButtons04"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 OeCyC"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 eZzilu"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Inverted radio
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Units/RadioButton Checked 1`] = `
<div
  className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
>
  <label
    className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
  >
    <input
      checked={true}
      className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
      name="RadioButtons02"
      type="radio"
    />
    <div
      className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
    >
      <div
        className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
      />
    </div>
    <div
      className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
    >
      Default checked radio
    </div>
  </label>
</div>
`;

exports[`Storyshots Units/RadioButton Colour 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 jYQeIN"
          name="RadioButtons"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 iXRqLe"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bMMBJy"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Primary colour radio
        </div>
      </label>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 bdpfvB"
          name="RadioButtons"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 jxLUMX"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 fLbbgD"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Success colour radio
        </div>
      </label>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 eOwlHp"
          name="RadioButtons"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 hHGzRD"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 huyqXr"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Warning colour radio
        </div>
      </label>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 hjZZDd"
          name="RadioButtons"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 crGNEn"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 fDNuFT"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Danger colour radio
        </div>
      </label>
    </div>
  </div>,
]
`;

exports[`Storyshots Units/RadioButton Default 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
          name="RadioButtons01"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Default radio
        </div>
      </label>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
          name="RadioButtons01"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Default radio 02
        </div>
      </label>
    </div>
  </div>,
]
`;

exports[`Storyshots Units/RadioButton Disabled 1`] = `
Array [
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 caxtUt"
        disabled={true}
      >
        <input
          className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
          disabled={true}
          name="RadioButtons03"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Disabled unchecked radio
        </div>
      </label>
    </div>
  </div>,
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="RadioButton__RadioButtonItem-d2jy6y-0 eqcrGb"
    >
      <label
        className="RadioButton__RadioButtonLabel-d2jy6y-1 caxtUt"
        disabled={true}
      >
        <input
          checked={true}
          className="RadioButton__RadioButtonControl-d2jy6y-2 kdKDlH"
          disabled={true}
          name="RadioButtons03"
          type="radio"
        />
        <div
          className="RadioButton__RadioButtonCircle-d2jy6y-3 dQIFue"
        >
          <div
            className="RadioButton__RadioButtonDot-d2jy6y-4 bykKuA"
          />
        </div>
        <div
          className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
        >
          Disabled checked radio
        </div>
      </label>
    </div>
  </div>,
]
`;

exports[`Storyshots Units/RadioButton Inverted 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 cizYVY"
  data-testid={null}
>
  <div
    className="RadioButton__RadioButtonItem-d2jy6y-0 kJxzei"
  >
    <label
      className="RadioButton__RadioButtonLabel-d2jy6y-1 dpSbtL"
    >
      <input
        className="RadioButton__RadioButtonControl-d2jy6y-2 hVPBQb"
        name="RadioButtons04"
        type="radio"
      />
      <div
        className="RadioButton__RadioButtonCircle-d2jy6y-3 OeCyC"
      >
        <div
          className="RadioButton__RadioButtonDot-d2jy6y-4 eZzilu"
        />
      </div>
      <div
        className="RadioButton__RadioButtonText-d2jy6y-5 jvVOeF"
      >
        Inverted radio
      </div>
    </label>
  </div>
</div>
`;
